--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@fastify/swagger": "^8.10.1",
+    "@fastify/swagger-ui": "^1.9.3",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.6.2",
